--- a/eureka-server-discovery/pom.xml
+++ b/eureka-server-discovery/pom.xml
@@ -66,6 +66,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>eureka-service-discovery</finalName>
 	</build>
 
 </project>
