--- a/credits-service/src/main/resources/application.properties
+++ b/credits-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #SERVICE CONFIGURATION
 spring.application.name=service-credit
-server.port=${PORT:0}
+server.port=${PORT:9600}
 
 #MYSQL C0NFIGURATION
 spring.jpa.hibernate.ddl-auto=update
@@ -11,6 +11,20 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
 #EUREKA CLIENT CONFIGURATION
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8762/eureka/
 #setting instance-id random
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+#KAFKA CONFIGURATIONS
+##Consumer
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=group_id
+
+##Producer
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+#KAFKA CONFIGURATIONS
