adding docker-compose file for deploy services (mysql,mongo,eureka, kafka, zookeeper, credits-service)

--- a/products-service/pom.xml
+++ b/products-service/pom.xml
@@ -67,8 +67,8 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>products-service</finalName>
 	</build>
-
 
 	<dependencyManagement>
 		<dependencies>
