Renaming service folders

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=service-user
 server.port=9500
 
 #MONGO CONFIGURATION
-spring.data.mongodb.username=fonse
-spring.data.mongodb.password=mongo_dev_123
-spring.data.mongodb.database=ns_users
+spring.data.mongodb.username=escritor
+spring.data.mongodb.password=123456
+spring.data.mongodb.database=blog
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
