Removing Kafka, and changing ports to default

--- a/business-service/src/main/resources/application.properties
+++ b/business-service/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 # server.port: ${APP_PORT}
 spring.application.name=service-business
-server.port=${PORT:0}
+# server.port=${PORT:0}
+server.port=9900
 
 #MONGODB CONFIGURATION
 spring.data.mongodb.username=fonse
