--- a/eureka-server-discovery/pom.xml
+++ b/eureka-server-discovery/pom.xml
@@ -65,6 +65,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>repackage</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.nuvissoft.commerce.eurekaserverdiscovery.EurekaServerDiscoveryApplication</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 		<finalName>eureka-service-discovery</finalName>
 	</build>
