--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # server.port: ${APP_PORT}
 spring.application.name=service-product
-server.port=${PORT:0}
+# server.port=${PORT:0}
+server.port=9600
 
 #MONGODB CONFIGURATION
 spring.data.mongodb.username=fonse
 spring.data.mongodb.password=mongo_dev_123
+spring.data.mongodb.AUTHENTICATION-database=admin
 spring.data.mongodb.database=ns_dev_products
 spring.data.mongodb.port=27017
 
