--- a/credits-service/pom.xml
+++ b/credits-service/pom.xml
@@ -55,11 +55,11 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.kafka</groupId>
-			<artifactId>spring-kafka</artifactId>
+		<!-- <dependency> -->
+			<!-- <groupId>org.springframework.kafka</groupId> -->
+			<!-- <artifactId>spring-kafka</artifactId> -->
 			<!-- <version>1.0.2.RELEASE</version> -->
-		</dependency>
+		<!-- </dependency> -->
 	</dependencies>
 
 	<build>
