--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # server.port: ${APP_PORT}
 spring.application.name=service-order
-server.port=${PORT:0}
+# server.port=${PORT:0}
+server.port=9800
 
 #MONGODB CONFIGURATION
 spring.data.mongodb.username=fonse
