--- a/credits-service/src/main/resources/application.properties
+++ b/credits-service/src/main/resources/application.properties
@@ -4,12 +4,17 @@ spring.application.name=service-credit
 server.port=9700
 
 #MYSQL C0NFIGURATION
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/ns_dev?serverTimezone=UTC
-spring.datasource.username=fonse
-spring.datasource.password=123_fonse_dev
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/ns_dev?serverTimezone=UTC
+# spring.datasource.username=fonse
+# spring.datasource.password=123_fonse_dev
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.show-sql=true
+
+#MONGODB CONFIGURATION
+spring.data.mongodb.host:localhost
+spring.data.mongodb.database=db_credits
+spring.data.mongodb.port=27017
 
 #EUREKA CLIENT CONFIGURATION
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
