--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -4,11 +4,15 @@ spring.application.name=service-product
 server.port=9600
 
 #MONGODB CONFIGURATION
-spring.data.mongodb.username=fonse
-spring.data.mongodb.password=mongo_dev_123
-spring.data.mongodb.AUTHENTICATION-database=admin
-spring.data.mongodb.database=ns_dev_products
+
+spring.data.mongodb.host=localhost
+# spring.data.mongodb.username=fonse
+# spring.data.mongodb.password=mongo_dev_123
+spring.data.mongodb.database=db_products
+# spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.port=27017
+
+# spring.data.mongodb.uri=mongodb://fonse:mongo_dev_123@localhost/db_products?authSource=admin
 
 #MongoDB Atlas
 # spring.data.mongodb.uri=mongodb+srv://fonse:fonse123@ns-commerce-product-ser.xij0r.mongodb.net/db_product_service?retryWrites=true&w=majority
