--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=service-user
 server.port=9500
 
 #MONGO CONFIGURATION
-spring.data.mongodb.username=fonse
-spring.data.mongodb.password=mongo_dev_123
-spring.data.mmongodb.authentication-database=admin
+# spring.data.mongodb.username=fonse
+# spring.data.mongodb.password=mongo_dev_123
+# spring.data.mmongodb.authentication-database=admin
 spring.data.mongodb.database=ns_dev_users
 spring.data.mongodb.port=27017
 
