--- a/business-service/src/main/resources/application.properties
+++ b/business-service/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.application.name=service-business
 server.port=9900
 
 #MONGODB CONFIGURATION
-spring.data.mongodb.username=fonse
-spring.data.mongodb.password=mongo_dev_123
+# spring.data.mongodb.username=fonse
+# spring.data.mongodb.password=mongo_dev_123
 spring.data.mongodb.database=ns_dev_business
 spring.data.mongodb.port=27017
 
