--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=service-order
 server.port=9800
 
 #MONGODB CONFIGURATION
-spring.data.mongodb.username=fonse
-spring.data.mongodb.password=mongo_dev_123
+# spring.data.mongodb.username=fonse
+# spring.data.mongodb.password=mongo_dev_123
 spring.data.mongodb.database=ns_dev_order
 spring.data.mongodb.port=27017
 
