--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=9500
 # spring.data.mongodb.username=fonse
 # spring.data.mongodb.password=mongo_dev_123
 # spring.data.mmongodb.authentication-database=admin
-spring.data.mongodb.database=ns_dev_users
+spring.data.mongodb.database=db_users
 spring.data.mongodb.port=27017
 
 #EUREKA CLIENT CONFIGURATION
